# NotPython

./: .gitignore  CMakeLists.txt  README.md  debug.h  main.cpp  optimization.h
code/: ExpressionParser.cpp  ExpressionParser.h  GenericParser.cpp  GenericParser.h  IRequester.h
code/keywords/: AbstractKeyword.cpp  AbstractKeyword.h  If.cpp  If.h  Return.cpp  Return.h  Var.cpp  Var.h
code/keywords/natives/: Print.cpp  Print.h
code/parsers/: CinParser.cpp  CinParser.h  FunctionParser.cpp  FunctionParser.h  GenericParser.cpp  GenericParser.h
code/reqeusters/: BlockRequester.cpp  BlockRequester.h  CinRequester.cpp  CinRequester.h  FunctionRequester.cpp  FunctionRequester.h  VectorRequester.cpp  VectorRequester.h
data/: IOR.cpp  IOR.h  Memory.cpp  Memory.h  MemoryNew.cpp  MemoryNew.h
data/datatypes/: AnonymousObject.cpp  AnonymousObject.h  PyObject.cpp  PyObject.h
data/datatypes/primitive/: PyBoolean.cpp  PyBoolean.h  PyFunction.cpp  PyFunction.h  PyInteger.cpp  PyInteger.h  PyPrimitive.cpp  PyPrimitive.h  PyString.cpp  PyString.h
data/memory-structure/: Context.cpp  Context.h  Pool.cpp  Pool.h  PoolMaster.cpp  PoolMaster.h
examples/: find_primes.npy  inheritance.npy  prng.npy  pycb_test.npy
memory/: Class.cpp  Class.h  MemoryManager.cpp  MemoryManager.h  PyClass.cpp  PyClass.h
memory/builtins/: Integer.cpp  Integer.h  PyBool.cpp  PyBool.h  PyCodeblock.cpp  PyCodeblock.h  PyFunction.cpp  PyFunction.h  PyInteger.cpp  PyInteger.h  PyList.cpp  PyList.h  PyString.cpp  PyString.h  PyVariable.cpp  PyVariable.h
memory/builtins/classes/: ObjectStructure.cpp  ObjectStructure.h  PyClassInstance.cpp  PyClassInstance.h  PyClassStructure.cpp  PyClassStructure.h  PyMethod.cpp  PyMethod.h
memory/builtins/functions/: PyFunction.cpp  PyFunction.h  PyInternalFunction.cpp  PyInternalFunction.h
memory/builtins/primitive/: PyBool.cpp  PyBool.h  PyInteger.cpp  PyInteger.h  PyString.cpp  PyString.h
parsing/: ExpressionParser.cpp  ExpressionParser.h
parsing/operators/: ClassOperator.cpp  ClassOperator.h  Operator.cpp  Operator.h  OptionalCodeblock.cpp  OptionalCodeblock.h
parsing/operators/binary/: Addition.cpp  Addition.h  BinaryExpression.cpp  BinaryExpression.h  BinaryOperator.cpp  BinaryOperator.h  CommaOperator.cpp  CommaOperator.h  DotOperator.cpp  DotOperator.h  SetOperator.cpp  SetOperator.h  SimpleBinaryOperator.cpp  SimpleBinaryOperator.h
parsing/operators/encapsulating/: Brackets.cpp  Brackets.h  EncapsulatingOperator.cpp  (+9 more)
util/: LinkedList.cpp  LinkedList.h  Node.cpp  Node.h  NullPointerException.cpp  NullPointerException.h
(+46 files in other folders)
